feat: add more endpoints MJAPPTEAM-1887 (#4)
* feat: update openapi spec to v 3.1. MJAPPTEAM-1887

- also add many more public endpoints

* feat: automatically get list of endpoint from openapi spec MJAPPTEAM-1887

* update schema and use operationId from from spec if present

* update API schema  MJAPPTEAM-1887

- more endpoints, ~2000 less lines

* feat: Add identifier to http requests MJAPPTEAM-1887

* chore: update comments, errors and type checking config MJAPPTEAM-1887

* feat: rollback to zod v3 MJAPPTEAM-1887

- this fixes query paramters being exposed properly

* feat: update schema

* update tests to handle new zod version

* update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "module": "Node16",
+    "module": "NodeNext",
     "moduleResolution": "Node16",
     "checkJs": true,
     "declaration": true,
